--- a/edi/ejc/maven-ejc-plugin/pom.xml
+++ b/edi/ejc/maven-ejc-plugin/pom.xml
@@ -1,69 +1,85 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.milyn</groupId>
-        <artifactId>smooks-parent</artifactId>
-	<version>1.7.1-SNAPSHOT</version>
-        <relativePath>../../../smooks-parent/pom.xml</relativePath>
-    </parent>
-    <name>Milyn :: EDI :: Edifact Java Compiler :: Maven Plugin Mojo</name>
-    <artifactId>ejc-maven-plugin</artifactId>
-    <packaging>maven-plugin</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.milyn</groupId>
+		<artifactId>smooks-parent</artifactId>
+		<version>1.7.1-SNAPSHOT</version>
+		<relativePath>../../../smooks-parent/pom.xml</relativePath>
+	</parent>
+	<name>Milyn :: EDI :: Edifact Java Compiler :: Maven Plugin Mojo</name>
+	<artifactId>ejc-maven-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-project</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+		</dependency>
 
-        <dependency>
-            <groupId>org.apache.maven.plugin-tools</groupId>
-            <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
-            <scope>provided</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.4</version>
+			<scope>provided</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>org.milyn</groupId>
-            <artifactId>milyn-smooks-ejc</artifactId>
-            <exclusions>
-            	<exclusion>
-                   <groupId>org.milyn</groupId>            	   
-              	   <artifactId>milyn-smooks-javabean</artifactId>
-            	</exclusion>
-            </exclusions>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.milyn</groupId>
+			<artifactId>milyn-smooks-ejc</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.milyn</groupId>
+					<artifactId>milyn-smooks-javabean</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <configuration>
-          	   <goalPrefix>ejc</goalPrefix>
-          	   <outputDirectory>target/classes/META-INF/maven</outputDirectory>
-        	</configuration>
-                <executions>
-                   <execution>
-            	      <id>generate</id>
-            	      <phase>generate-sources</phase>
-          	   </execution>
-          	   <execution>
-            	      <id>generated-helpmojo</id>
-            	      <goals>
-              		 <goal>helpmojo</goal>
-            	      </goals>
-          	   </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-plugin-plugin</artifactId>
+					<version>3.2</version>
+					<configuration>
+						<goalPrefix>ejc</goalPrefix>
+						<outputDirectory>target/classes/META-INF/maven</outputDirectory>
+					</configuration>
+					<executions>
+						<execution>
+							<id>generate</id>
+							<phase>generate-sources</phase>
+						</execution>
+                <execution>
+                    <id>default-descriptor</id>
+                    <goals>
+                        <goal>descriptor</goal>
+                    </goals>
+                    <phase>process-classes</phase>
+                </execution>
+                <execution>
+                    <id>help-descriptor</id>
+                    <goals>
+                        <goal>helpmojo</goal>
+                    </goals>
+                    <phase>process-classes</phase>
+                </execution>
+<!-- 						<execution> -->
+<!-- 							<id>generated-helpmojo</id> -->
+<!-- 							<goals> -->
+<!-- 								<goal>helpmojo</goal> -->
+<!-- 							</goals> -->
+<!-- 						</execution> -->
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
