--- a/smooks-parent/pom.xml
+++ b/smooks-parent/pom.xml
@@ -1167,14 +1167,7 @@
                 <updatePolicy>never</updatePolicy>
             </snapshots>
         </repository>
-        <repository>
-            <id>mvel</id>
-            <url>http://repository.codehaus.org</url>
-        </repository>
-        <repository>
-            <id>smooks</id>
-            <url>http://smooks.org/maven2/</url>
-        </repository>
+        
         <repository>
             <id>jibx.sf.net</id>
             <name>JiBX repository</name>
@@ -1186,32 +1179,16 @@
                 <enabled>false</enabled>
             </snapshots>
          </repository>
-         <repository>
-            <id>zodiac-repository</id>
-            <name>Zodiac Milestone Repository</name>
-            <url>http://zodiac.springsource.com/maven/bundles/milestone</url>
-         </repository>
-         <repository>
-            <id>codehaus-snapshots</id>
-            <name>Codehaus Snapshots</name>
-            <url>http://nexus.codehaus.org/snapshots/</url>
-            <releases>
-               <enabled>false</enabled>
-            </releases>
-            <snapshots>
-               <enabled>true</enabled>
-            </snapshots>
-         </repository>
-         <repository>
-            <id>com.springsource.repository.bundles.release</id>
-            <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
-            <url>http://repository.springsource.com/maven/bundles/release</url>
-         </repository>
-         <repository>
-            <id>com.springsource.repository.bundles.external</id>
-            <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
-            <url>http://repository.springsource.com/maven/bundles/external</url>
-         </repository>
+         
+		 <repository>
+		  <id>central</id>
+		  <name>Maven Repository Switchboard</name>
+		  <layout>default</layout>
+		  <url>http://repo1.maven.org/maven2</url>
+		  <snapshots>
+			<enabled>false</enabled>
+		  </snapshots>
+		</repository>
     </repositories>
 
     <pluginRepositories>
