--- a/smooks-cartridges/camel/pom.xml
+++ b/smooks-cartridges/camel/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>testres</artifactId>
 	<version>1.7.1-SNAPSHOT</version>
         <relativePath>../../testres/pom.xml</relativePath>
@@ -27,23 +27,23 @@
         </dependency>
 
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-javabean</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-edi</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-csv</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-templating</artifactId>
             <scope>test</scope>
         </dependency>
