--- a/smooks-examples/xml-read-write/pom.xml
+++ b/smooks-examples/xml-read-write/pom.xml
@@ -18,7 +18,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-examples-parent</artifactId>
 	<version>1.7.1-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
@@ -30,7 +30,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-javabean</artifactId>
         </dependency>
     </dependencies>
