--- a/smooks-parent/pom.xml
+++ b/smooks-parent/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.milyn</groupId>
+    <groupId>be.allianz.smooks</groupId>
     <artifactId>smooks-parent</artifactId>
     <version>1.7.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -98,170 +98,170 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>testres</artifactId>
                 <version>${project.version}</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-all</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-commons</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-javabean</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-templating</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-scribe-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-edisax-parser</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-ect</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-ejc</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-rules</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-edi</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-routing</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-flatfile</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-calc</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-camel</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-csv</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-fixed-length</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-misc</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-json</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-persistence</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-scripting</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-validation</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-yaml</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-scribe-hibernate</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-scribe-ibatis</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-scribe-jpa</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.milyn</groupId>
+                <groupId>be.allianz.smooks</groupId>
                 <artifactId>milyn-smooks-example-ejc-model-gen</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -1189,6 +1189,7 @@
 			<enabled>false</enabled>
 		  </snapshots>
 		</repository>
+
     </repositories>
 
     <pluginRepositories>
