--- a/edi/ect/maven-ect-plugin/pom.xml
+++ b/edi/ect/maven-ect-plugin/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-parent</artifactId>
 	<version>1.7.1-SNAPSHOT</version>
         <relativePath>../../../smooks-parent/pom.xml</relativePath>
@@ -31,11 +31,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-ect</artifactId>
             <exclusions>
             	<exclusion>
-            	        <groupId>org.milyn</groupId>
+            	        <groupId>be.allianz.smooks</groupId>
             		<artifactId>milyn-smooks-javabean</artifactId>
             	</exclusion>
             </exclusions>
