--- a/scribe/core/pom.xml
+++ b/scribe/core/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>scribe-parent</artifactId>
 	<version>1.7.1-SNAPSHOT</version>
         <relativePath>../scribe-parent/pom.xml</relativePath>
@@ -14,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-commons</artifactId>
         </dependency>
         <dependency>
