--- a/smooks-cartridges/perfcomp/pom.xml
+++ b/smooks-cartridges/perfcomp/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>testres</artifactId>
         <version>1.7.1-SNAPSHOT</version>
         <relativePath>../../testres/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.milyn</groupId>
+    <groupId>be.allianz.smooks</groupId>
     <artifactId>milyn-smooks-perfcomp</artifactId>
     
     <dependencies>
@@ -21,13 +21,13 @@
         </dependency>
 
         <dependency>
-           <groupId>org.milyn</groupId>
+           <groupId>be.allianz.smooks</groupId>
            <artifactId>milyn-smooks-javabean</artifactId>
            <scope>test</scope>
         </dependency>
 
         <dependency>
-           <groupId>org.milyn</groupId>
+           <groupId>be.allianz.smooks</groupId>
            <artifactId>milyn-smooks-templating</artifactId>
            <scope>test</scope>
         </dependency>
