--- a/smooks-examples/drools-fusion/pom.xml
+++ b/smooks-examples/drools-fusion/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>testres</artifactId>
         <version>1.7.1-SNAPSHOT</version>
         <relativePath>../../testres/pom.xml</relativePath>
@@ -29,7 +29,7 @@
             <artifactId>drools-core</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>org.milyn</groupId>
+                    <groupId>be.allianz.smooks</groupId>
                     <artifactId>milyn-smooks-javabean</artifactId>
                 </exclusion>
             </exclusions>
@@ -39,7 +39,7 @@
             <artifactId>drools-compiler</artifactId>
             <exclusions>
                 <exclusion>
-                    <groupId>org.milyn</groupId>
+                    <groupId>be.allianz.smooks</groupId>
                     <artifactId>milyn-smooks-javabean</artifactId>
                 </exclusion>
             </exclusions>
@@ -55,11 +55,11 @@
             <artifactId>forms</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-csv</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-javabean</artifactId>
         </dependency>
     </dependencies>
