--- a/smooks-examples/parent/pom.xml
+++ b/smooks-examples/parent/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>testres</artifactId>
 	<version>1.7.1-SNAPSHOT</version>
         <relativePath>../../testres/pom.xml</relativePath>
