--- a/smooks-examples/xslt-groovy/pom.xml
+++ b/smooks-examples/xslt-groovy/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.milyn</groupId>
+        <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-examples-parent</artifactId>
 	<version>1.7.1-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
@@ -15,11 +15,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-scripting</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.milyn</groupId>
+            <groupId>be.allianz.smooks</groupId>
             <artifactId>milyn-smooks-templating</artifactId>
         </dependency>
 
