Update pom's to be able to build Smooks from scratch without maven central.

--- a/smooks-cartridges/javabean/perfcomp/pom.xml
+++ b/smooks-cartridges/javabean/perfcomp/pom.xml
@@ -5,7 +5,7 @@
     <parent>
        <groupId>be.allianz.smooks</groupId>
        <artifactId>testres</artifactId>
-       <version>1.7.1-SNAPSHOT</version>
+       <version>1.7.1</version>
        <relativePath>../../../testres/pom.xml</relativePath>
     </parent>
 
