--- a/edi/ect/maven-ect-plugin/pom.xml
+++ b/edi/ect/maven-ect-plugin/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-parent</artifactId>
-	<version>1.7.1-SNAPSHOT</version>
+	<version>1.7.1</version>
         <relativePath>../../../smooks-parent/pom.xml</relativePath>
     </parent>
 
