--- a/edi/ejc/maven-ejc-plugin/pom.xml
+++ b/edi/ejc/maven-ejc-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>be.allianz.smooks</groupId>
 		<artifactId>smooks-parent</artifactId>
-		<version>1.7.1-SNAPSHOT</version>
+		<version>1.7.1</version>
 		<relativePath>../../../smooks-parent/pom.xml</relativePath>
 	</parent>
 	<name>Milyn :: EDI :: Edifact Java Compiler :: Maven Plugin Mojo</name>
