--- a/edi/ejc/pom.xml
+++ b/edi/ejc/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>be.allianz.smooks</groupId>
 		<artifactId>testres</artifactId>
-		<version>1.7.1-SNAPSHOT</version>
+		<version>1.7.1</version>
 		<relativePath>../../testres/pom.xml</relativePath>
 	</parent>
 	<name>Milyn :: EDI :: Edifact Java Compiler</name>
