--- a/edi/pom.xml
+++ b/edi/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-parent</artifactId>
-	<version>1.7.1-SNAPSHOT</version>
+	<version>1.7.1</version>
         <relativePath>../smooks-parent/pom.xml</relativePath>
     </parent>
 
@@ -19,7 +19,7 @@
         <module>ect/maven-ect-plugin</module>
         <module>ejc</module>
         <module>ejc/maven-ejc-plugin</module>
-        <module>edi-test</module>
+        <!--<module>edi-test</module>-->
         <module>edi-utils</module>
     </modules>
 
