--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-parent</artifactId>
-	<version>1.7.1-SNAPSHOT</version>
+	<version>1.7.1</version>
         <relativePath>smooks-parent/pom.xml</relativePath>
     </parent>
 
@@ -24,8 +24,8 @@
         <module>commons</module>
         <module>smooks-core</module>
         <module>scribe</module>
-        <module>edi</module>
-        <module>smooks-cartridges</module>
+        <module>smooks-cartridges</module>        
+		<module>edi</module>
         <module>smooks-all</module>
        <!-- <module>smooks-examples</module>-->
     </modules>
