--- a/smooks-cartridges/scripting/pom.xml
+++ b/smooks-cartridges/scripting/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-parent</artifactId>
-	<version>1.7.1-SNAPSHOT</version>
+	<version>1.7.1</version>
         <relativePath>../../smooks-parent/pom.xml</relativePath>
     </parent>
 
