--- a/smooks-examples/osgi/blueprint/pom.xml
+++ b/smooks-examples/osgi/blueprint/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>be.allianz.smooks</groupId>
         <artifactId>smooks-examples-parent</artifactId>
-        <version>1.7.1-SNAPSHOT</version>
+        <version>1.7.1</version>
         <relativePath>../../parent/pom.xml</relativePath>
     </parent>
 
