--- a/smooks-parent/pom.xml
+++ b/smooks-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>be.allianz.smooks</groupId>
     <artifactId>smooks-parent</artifactId>
-    <version>1.7.1-SNAPSHOT</version>
+    <version>1.7.1</version>
     <packaging>pom</packaging>
     <name>Milyn :: Smooks</name>
     <url>http://www.smooks.org</url>
