--- a/testres/antrunner/pom.xml
+++ b/testres/antrunner/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>be.allianz.smooks</groupId>
         <artifactId>testres</artifactId>
-	<version>1.7.1-SNAPSHOT</version>
+	<version>1.7.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <name>Milyn :: Test Resources</name>
